--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
 	"dependencies": {},
   "devDependencies": {
     "babel-eslint": "^6.0.2",
-    "eslint": "^2.8.0",
+    "eslint": ">=4.18.2",
     "eslint-plugin-react": "^5.0.1",
     "eslint-plugin-react-native": "^1.0.0"
   }
